# qtprojects

calculator/: CMakeLists.txt  exw.cpp  exw.h  main.cpp
color_mix/: CMakeLists.txt  ColorPalette.cpp  ColorPalette.h  main.cpp
